--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -397,7 +397,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0 ₫"
-                        android:textColor="#FFFFFF"
+                        android:textColor="#4338CA"
                         android:textStyle="bold"
                         android:textSize="32sp"
                         android:letterSpacing="0.01" />
