--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="nav_item_color">#3B82F6</color>
+    <color name="nav_item_color">#73289D</color>
     <color name="gray">#BDBDBD</color>
     <color name="purple_500">#6200EE</color>
     <color name="bg_light_gray">#F4F5F7</color>
