--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="gray">#BDBDBD</color>
     <color name="purple_500">#6200EE</color>
     <color name="bg_light_gray">#F4F5F7</color>
+    <color name="primary">#4F46E5</color>
+    <color name="background">#F1F5F9</color>
+    <color name="surface">#FFFFFF</color>
+    <color name="accent">#10B981</color>
+    <color name="nav_item_background">#E5E7EB</color>
 
 </resources>
